added spacing and section comments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+    <!-- navigation section -->
+
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,7 +27,13 @@
             </ul>
         </div>
     </div>
+
+    <!-- hero section -->
+
     <div class="hero"></div>
+
+    <!--content section-->
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +57,9 @@
             </p>
         </div>
     </div>
+
+    <!-- benefits section -->
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,6 +83,9 @@
             </p>
         </div>
     </div>
+
+    <!-- footer section -->
+    
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
