--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
 
     <!-- navigation section -->
 
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,8 +25,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
 
     <!-- hero section -->
 
@@ -85,7 +85,7 @@
     </div>
 
     <!-- footer section -->
-    
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
