--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,14 +28,16 @@
         </nav>
     </header>
 
+    <!-- changed main sections from div -->
+
     <!-- hero section -->
 
-    <div class="hero"></div>
+    <section class="hero"></section>
 
     <!--content section-->
 
-    <div class="content">
-        <div class="search-engine-optimization">
+    <section class="content">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -56,11 +58,11 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
 
     <!-- benefits section -->
 
-    <div class="benefits">
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -82,16 +84,17 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
 
     <!-- footer section -->
 
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+    
 </body>
 
 </html>
